Fix overflow-x issue and layout update

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,9 +26,10 @@
   }
 }
 
-body {
+html,body {
   @apply bg-primary text-textMain font-sans;
   font-family: 'Inter', sans-serif;
   scroll-behavior: smooth;
+  overflow-x : hidden;
 }
 
